--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios": "^0.19.0",
     "react": "16.9.0",
     "react-native": "0.61.2",
+    "react-native-eva-icons": "^1.2.1",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-svg": "^9.13.3",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.5.6",
