--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'move' do
-  # Pods for move
+target 'Move' do
+  # Pods for Move
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -34,7 +34,7 @@ target 'move' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  target 'moveTests' do
+  target 'MoveTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -42,10 +42,10 @@ target 'move' do
   use_native_modules!
 end
 
-target 'move-tvOS' do
-  # Pods for move-tvOS
+target 'Move-tvOS' do
+  # Pods for Move-tvOS
 
-  target 'move-tvOSTests' do
+  target 'Move-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
