--- a/ios/move.xcodeproj/xcshareddata/xcschemes/move.xcscheme
+++ b/ios/move.xcodeproj/xcshareddata/xcschemes/move.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "move.app"
-               BlueprintName = "move"
-               ReferencedContainer = "container:move.xcodeproj">
+               BuildableName = "Move.app"
+               BlueprintName = "Move"
+               ReferencedContainer = "container:Move.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "moveTests.xctest"
-               BlueprintName = "moveTests"
-               ReferencedContainer = "container:move.xcodeproj">
+               BuildableName = "MoveTests.xctest"
+               BlueprintName = "MoveTests"
+               ReferencedContainer = "container:Move.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "moveTests.xctest"
-               BlueprintName = "moveTests"
-               ReferencedContainer = "container:move.xcodeproj">
+               BuildableName = "MoveTests.xctest"
+               BlueprintName = "MoveTests"
+               ReferencedContainer = "container:Move.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "move.app"
-            BlueprintName = "move"
-            ReferencedContainer = "container:move.xcodeproj">
+            BuildableName = "Move.app"
+            BlueprintName = "Move"
+            ReferencedContainer = "container:Move.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "move.app"
-            BlueprintName = "move"
-            ReferencedContainer = "container:move.xcodeproj">
+            BuildableName = "Move.app"
+            BlueprintName = "Move"
+            ReferencedContainer = "container:Move.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "move.app"
-            BlueprintName = "move"
-            ReferencedContainer = "container:move.xcodeproj">
+            BuildableName = "Move.app"
+            BlueprintName = "Move"
+            ReferencedContainer = "container:Move.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
