--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "@react-native-community/geolocation": "^2.0.2",
     "axios": "^0.19.0",
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-eva-icons": "^1.2.1",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-maps": "git+https://git@github.com/react-native-community/react-native-maps.git",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-snap-carousel": "^3.8.4",
