--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "react": "16.9.0",
     "react-native": "0.61.2",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-eva-icons": "^1.2.1",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-maps": "git+https://git@github.com/react-native-community/react-native-maps.git",
